# rustpy-blockchain

./: .gitignore  Makefile  README.md
backend/python/: app.py  main.py  requirements.txt  test_websocket.py
backend/python/api/: blockchain.py
backend/python/models/: block.py  blockchain.py
backend/python/services/: blockchain.py
backend/python/utils/: crypto.py  rust_integration.py
backend/rust_core/: Cargo.toml
backend/rust_core/core/: Cargo.toml
backend/rust_core/core/src/: lib.rs
backend/rust_core/keys/: Cargo.toml
backend/rust_core/keys/src/: crypto.rs
backend/rust_core/src/: lib.rs  main.rs
backend/rust_crypto/: Cargo.toml
backend/rust_crypto/src/: api.rs  main.rs  message.rs  websocket.rs
frontend/app/: page.tsx
