[package]
name = "rust_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-release = "0.25.13"
# For HTTP API
axum = "0.6.13"
tokio = { version = "1.39", features = ["full"] }
hyper = "0.14"

# For WebSocket server
tokio-tungstenite = "0.17"
futures-util = "0.3"
thiserror = "1.0.30"

# For Cryptographic operations
k256 = { version = "0.14.0-pre.2", features = ["ecdsa"] }
rand = "0.8.5"
rand_core = "0.6.4"
rand_chacha = "0.3"
base64 = "0.21"
elliptic-curve = "0.13.8"

# For JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"

# For logging (optional, but useful for debugging)
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Linting and Formatting
rust-analyzer = "0.0.1"
