[package]
name = "keys"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_crypto"
path = "./src/crypto.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
sha2 = { version = "0.9", default-features = false } # Cryptography utility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.13"
rand_chacha = "0.3" # Use version compatible with rand 0.8
ed25519-dalek = "1.0.1" # Ensure you use a compatible version
rand_core = "0.6"
secp256k1 = "0.21"
hex = "0.4"  # or the latest version
